--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
-    "webpack": "^5.73.0",
-    "zustand": "^4.0.0-rc.1"
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
