--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "5.2.0-beta1",
+    "firebase": "^9.8.4",
+    "firebase-admin": "^11.0.0",
+    "firebase-functions": "^3.21.2",
+    "firebase-tools": "^11.1.0",
     "node-sass": "^7.0.1",
+    "npm": "^8.13.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-redux-firebase": "3.1.1",
     "react-scripts": "5.0.1",
+    "redux-firestore": "0.12.0",
+    "sudo": "^1.0.3",
+    "util": "^0.12.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
     "webpack": "^5.73.0"
